--- a/normalize.css
+++ b/normalize.css
@@ -6,4 +6,7 @@ ul {
     list-style: none; 
 }
 
+h1{
+    text-decoration: #002688;
+}
 /* aqui pode ir adicionando outras propriedades paras as tags serem inicializadas com esses valores */
