--- a/normalize.css
+++ b/normalize.css
@@ -7,6 +7,8 @@ ul {
 }
 
 h1{
-    text-decoration: #002688;
+    color: #2400FF;
+    font-family: 'Inter';
+    text-transform: uppercase;
 }
 /* aqui pode ir adicionando outras propriedades paras as tags serem inicializadas com esses valores */
