feat: Inserção das propriedades de cores na root

--- a/root.css
+++ b/root.css
@@ -6,6 +6,8 @@
     /* CORES ACIMA */
     --azul: #2400FF;
     --roxo: #BD00FF;
+    --azulescuro:#002688;
+    --vermelho: #DD0000;
     /* TAMANHO DE FONTES */
     --tamanho-padrao-fonte: 1rem;
 }
